--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,10 +3,11 @@ layout: default
 ---
 {% include navheader.html %}
 
-{% include portfolio_grid.html %}
 {% include team.html %}
+{% include portfolio_grid.html %}
 {% include publications.html %}
-{% include timeline.html %}
 {% include resources.html %}
+{% include fun.html %}
+{% include timeline.html %}
 
 {% include contact.html %}
