--- a/_includes/research.html
+++ b/_includes/research.html
@@ -1,4 +1,4 @@
-<!-- Research -->
+<!-- Research Grid -->
 <section class="bg-light page-section" id="{{ site.data.sitetext[site.locale].research.section | default: "research" }}">
   <div class="container">
     <div class="row">
@@ -27,5 +27,4 @@
     </div>
   </div>
 </section>
-{% include modals.html %}
-<!-- End Research -->
+{% include research_modals.html %}
