--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 {% include navheader.html %}
 
 {% include team.html %}
-{% include portfolio_grid.html %}
+{% include research.html %}
 {% include publications.html %}
 {% include resources.html %}
 {% include fun.html %}
