--- a/_includes/team.html
+++ b/_includes/team.html
@@ -9,9 +9,9 @@
     </div>
     <div class="row">
     {% for person in site.data.sitetext[site.locale].team.people %}
-      <div class="col-sm-4">
+      <div class="col-md-4 col-sm-6">
         <div class="team-member">
-          <img class="mx-auto rounded-circle" src="{{ person.image }}" alt="">
+          <img class="mx-auto rounded-circle" src="{{ person.image }}" alt="{{ person.name }} picture">
           <h4>{{ person.name }}</h4>
           <h5 class="text-muted"></h5>
           <h6 class="text-muted">{{ person.degree }}</h6>
