--- a/assets/css/agency.scss
+++ b/assets/css/agency.scss
@@ -28,5 +28,6 @@ $contact-image: "{{ site.data.style.contact-image }}";
 @import "layout/research.scss";
 @import "layout/timeline.scss";
 @import "layout/team.scss";
+@import "layout/fun.scss";
 @import "layout/contact.scss";
 @import "layout/footer.scss";
