--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,10 +25,7 @@
       <div class="col-md-4">
         <ul class="list-inline quicklinks">
           <li class="list-inline-item">
-            <a href="legal"
-              >{{ site.data.sitetext[site.locale].footer.legal | default:
-              "Privacy Policy" }}</a
-            >
+            <a href="https://www.janelia.org/">HHMI Janelia</a>
           </li>
         </ul>
       </div>
