--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,9 +15,11 @@
   {% endif %}
 
   <meta charset="utf-8">
-  <link rel="icon" href="https://www.janelia.org/sites/all/themes/janelia7/favicon.ico" type="image/x-icon" />
-  <!-- <link rel="icon" href="assets/favicon-blk.ico" type="image/x-icon" /> -->
-  
+  <!-- <link rel="icon" href="https://www.janelia.org/sites/all/themes/janelia7/favicon.ico" type="image/x-icon" /> -->
+  <link rel="icon" href="assets/favicon-blk.ico" type="image/x-icon" />
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="{{ site.description }}">
   <meta name="author" content="{{ site.author }}">
