--- a/_includes/team.html
+++ b/_includes/team.html
@@ -12,11 +12,10 @@
       <div class="col-md-4 col-sm-6">
         <div class="team-member">
           <img class="mx-auto rounded-circle" src="{{ person.image }}" alt="{{ person.name }} picture">
-          <h4>{{ person.name }}</h4>
-          <h5 class="text-muted"></h5>
+          <h4>{{ person.name | markdownify }}</h4>
           <h6 class="text-muted">{{ person.degree }}</h6>
-          <!-- <h5 class="text-muted">{{ person.position }}</h5> -->
-          <p class="text-muted">{{ person.position }}</p>
+          <!-- <h6 class="text-muted">{{ person.position }}</h6> -->
+          <p class="text-muted">{{ person.position | markdownify }}</p>
           <ul class="list-inline social-buttons">
             {% for network in person.social %}
               <li class="list-inline-item">
