--- a/_includes/team.html
+++ b/_includes/team.html
@@ -12,10 +12,15 @@
       <div class="col-md-4 col-sm-6">
         <div class="team-member">
           <img class="mx-auto rounded-circle" src="{{ person.image }}" alt="{{ person.name }} picture">
-          <h4>{{ person.name | markdownify }}</h4>
+          {%- if person.section -%}
+            <a class="js-scroll-trigger" href="#{{ person.section }}">
+              <h4>{{ person.name }}</h4>
+            </a>
+          {%- else -%}
+            <h4>{{ person.name }}</h4>
+          {%- endif -%}
           <h6 class="text-muted">{{ person.degree }}</h6>
-          <!-- <h6 class="text-muted">{{ person.position }}</h6> -->
-          <p class="text-muted">{{ person.position | markdownify }}</p>
+          <p class="text-muted">{{ person.position }}</p>
           <ul class="list-inline social-buttons">
             {% for network in person.social %}
               <li class="list-inline-item">
