--- a/_includes/fun.html
+++ b/_includes/fun.html
@@ -9,10 +9,10 @@
     </div>
     <div class="row">
     {% for event in site.data.sitetext[site.locale].fun.events %}
-      <div class="col-md-4 col-sm-6">
+      <div class="col-md-6 col-sm-12">
         <div class="fun-event">
           <img class="img-fluid" src="{{ event.image }}" alt="{{ event.name }}">
-          <h4>{{ event.name }}</h4>
+          <!-- <h4>{{ event.name }}</h4> -->
           <p class="text-muted">{{ event.description | markdownify }}</p>
         </div>
       </div>
