--- a/_sass/layout/_fun.scss
+++ b/_sass/layout/_fun.scss
@@ -15,6 +15,9 @@
     text-transform: none;
   }
   p {
-    margin-top: 0;
+    width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    // text-align: left;
   }
 }
