--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -42,12 +42,12 @@
                 </div>
               </div>
             </li>
-		  {% endfor %}	
-            
-		  {% if site.data.sitetext[site.locale].timeline.end %}	
+		  {% endfor %}
+
+		  {% if site.data.sitetext[site.locale].timeline.end %}
 			<li class="timeline-inverted">
               <div class="timeline-image">
-                <h4>{{ site.data.sitetext[site.locale].timeline.end }}</h4>
+                <h4>{{ site.data.sitetext[site.locale].timeline.end | markdownify }}</h4>
               </div>
             </li>
 		  {% endif %}
