--- a/_sass/layout/_timeline.scss
+++ b/_sass/layout/_timeline.scss
@@ -55,7 +55,8 @@
       color: $white;
       border: 7px solid $gray-200;
       border-radius: 100%;
-      background-color: $primary;
+      // background-color: $primary;
+      background-color: $gray-600;
       h4 {
         font-size: 10px;
         line-height: 14px;
@@ -146,7 +147,7 @@
         h4 {
           font-size: 18px;
           line-height: 26px;
-          margin-top: 30px;
+          margin-top: 20px;
         }
       }
       &.timeline-inverted > .timeline-panel {
@@ -167,7 +168,7 @@
         height: 170px;
         margin-left: -85px;
         h4 {
-          margin-top: 40px;
+          margin-top: 30px;
         }
       }
       &.timeline-inverted > .timeline-panel {
