--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,9 @@
       <div class="col-md-4">
         <ul class="list-inline quicklinks">
           <li class="list-inline-item">
-            <a href="https://www.janelia.org/">HHMI Janelia</a>
+            <a href="https://www.janelia.org/">
+              <img src="/assets/img/logo/HHMI_Janelia_Logo-Black.png" alt="Janelia Logo">
+            </a>
           </li>
         </ul>
       </div>
