--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -15,6 +15,11 @@
     text-transform: none;
     @include heading-font;
   }
+  img {
+    // width: 100px;
+    height: 40px;
+    object-fit: contain;
+  }
 }
 
 ul.social-buttons {
