--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -8,7 +8,7 @@
     text-transform: none;
     @include heading-font;
   }
-  ul.quicklinks {
+  ul.affiliation {
     font-size: 90%;
     line-height: 40px;
     margin-bottom: 0;
