--- a/_includes/fun.html
+++ b/_includes/fun.html
@@ -17,6 +17,15 @@
         </div>
       </div>
     {% endfor %}
+    {% for event in site.data.sitetext[site.locale].fun.events_wide %}
+      <div class="col-md-12">
+        <div class="fun-event-wide">
+          <img class="img-fluid" src="{{ event.image }}" alt="{{ event.name }}">
+          <!-- <h4>{{ event.name }}</h4> -->
+          <p class="text-muted">{{ event.description | markdownify }}</p>
+        </div>
+      </div>
+    {% endfor %}
     </div>
     <div class="row">
     <!-- <div class="col-lg-8 mx-auto text-center">
