--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -47,7 +47,9 @@
 		  {% if site.data.sitetext[site.locale].timeline.end %}
 			<li class="timeline-inverted">
               <div class="timeline-image">
-                <h4>{{ site.data.sitetext[site.locale].timeline.end | markdownify }}</h4>
+                <a class="js-scroll-trigger" href="#contact">
+                  <h4>{{ site.data.sitetext[site.locale].timeline.end}}</h4>
+                </a>
               </div>
             </li>
 		  {% endif %}
