--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].publications.title | default: "publications" }}</h2>
-        <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].publications.text | default: "" }}</h3>
+        <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].publications.text | default: "" | markdownify }}</h3>
       </div>
     </div>
     <div class="row">
