--- a/_includes/resources.html
+++ b/_includes/resources.html
@@ -1,25 +1,28 @@
 <!-- resources -->
-  <section class="page-section" id="{{ site.data.sitetext[site.locale].resources.section | default: "resources" }}">
+  <section class="bg-light page-section" id="{{ site.data.sitetext[site.locale].resources.section | default: "resources" }}">
     <div class="container">
 
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].resources.title | default: "resources" }}</h2>
           {% if site.data.sitetext[site.locale].resources.text %}
-		  <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].resources.text }}</h3>
-		  {% endif %}
+		        <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].resources.text | markdownify }}</h3>
+		      {% endif %}
         </div>
       </div>
 
       <div class="row text-center">
-	  {% for service in site.data.sitetext[site.locale].resources.list %}
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="{{ service.icon | default: "fas fa-shopping-cart" }} fa-stack-1x fa-inverse"></i>
+	  {% for resource in site.data.sitetext[site.locale].resources.list %}
+        <div class="col-md-4 col-sm-6">
+
+          <span class="fa-stack fa-2x">
+            <i class="fas fa-circle fa-stack-2x"></i>
+            <i class="{{ resource.icon | default: "fas fa-list" }} fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">{{ service.title | markdownify }}</h4>
-          {% if service.desc %}<div class="text-muted">{{ service.desc | markdownify }}</div>{% endif %}
+          <h4 class="resource-heading">{{ resource.title | markdownify }}</h4>
+          {% if resource.desc %}
+          <div class="text-muted">{{ resource.desc | markdownify }}</div>
+          {% endif %}
         </div>
 	  {% endfor %}
       </div>
