--- a/_sass/layout/_fun.scss
+++ b/_sass/layout/_fun.scss
@@ -28,9 +28,9 @@
 .fun-event-wide {
   margin-bottom: 50px;
   text-align: center;
-  width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
+  width: 1100px;
+  margin-left: 0 auto;
+  margin-right: 0 auto;
   img {
     // width: 800px;
     height: 300px;
