--- a/assets/css/agency.scss
+++ b/assets/css/agency.scss
@@ -24,10 +24,11 @@ $contact-image: "{{ site.data.style.contact-image }}";
 
 // Layout
 @import "layout/masthead.scss";
-@import "layout/services.scss";
-@import "layout/research.scss";
-@import "layout/timeline.scss";
 @import "layout/team.scss";
+@import "layout/research.scss";
+@import "layout/publications.scss";
+@import "layout/resources.scss";
 @import "layout/fun.scss";
+@import "layout/timeline.scss";
 @import "layout/contact.scss";
 @import "layout/footer.scss";
