--- a/_includes/resources.html
+++ b/_includes/resources.html
@@ -13,12 +13,20 @@
 
       <div class="row text-center">
 	  {% for resource in site.data.sitetext[site.locale].resources.list %}
-        <div class="col-md-4 col-sm-6">
-
-          <span class="fa-stack fa-2x">
-            <i class="fas fa-circle fa-stack-2x"></i>
-            <i class="{{ resource.icon | default: "fas fa-list" }} fa-stack-1x fa-inverse"></i>
-          </span>
+        <div class="col-md-3 col-sm-6">
+          <!-- <span class="fa-stack fa-2x">
+            <a href="{{ resource.url }}">
+              <i class="fas fa-circle fa-stack-2x resource-button"></i>
+              <i class="{{ resource.icon | default: "fas fa-list" }} fa-stack-1x fa-inverse"></i>
+            </a>
+          </span> -->
+          <ul class="list-inline resource-buttons">
+              <li class="list-inline-item">
+                <a href="{{ resource.url }}">
+                  <i class="{{ resource.icon | default: "fas fa-list" }}"></i>
+                </a>
+              </li>
+          </ul>
           <h4 class="resource-heading">{{ resource.title | markdownify }}</h4>
           {% if resource.desc %}
           <div class="text-muted">{{ resource.desc | markdownify }}</div>
