--- a/_sass/layout/_resources.scss
+++ b/_sass/layout/_resources.scss
@@ -3,3 +3,50 @@
   margin: 15px 0;
   text-transform: none;
 }
+
+ul.resource-buttons {
+  margin-bottom: 0;
+  li {
+    a {
+      font-size: 25px;
+      line-height: 60px;
+      display: block;
+      width: 60px;
+      height: 60px;
+      -webkit-transition: all 0.3s;
+      -moz-transition: all 0.3s;
+      transition: all 0.3s;
+      color: white;
+      border-radius: 100%;
+      outline: none;
+      background-color: $gray-900;
+      &:active,
+      &:focus,
+      &:hover {
+        background-color: $primary;
+      }
+    }
+  }
+}
+
+.resource-button {
+  a {
+    // font-size: 22px;
+    // line-height: 40px;
+    display: block;
+    // width: 40px;
+    // height: 40px;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+    color: white;
+    border-radius: 100%;
+    outline: none;
+    background-color: $gray-900;
+    &:active,
+    &:focus,
+    &:hover {
+      background-color: $primary;
+    }
+  }
+}
