--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,58 +4,22 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-uppercase">
-          {{ site.data.sitetext[site.locale].contact.title | markdownify | default: Contact Us }}</h2>
-        <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].contact.text | default: "" }}</h3>
+          {{ site.data.sitetext[site.locale].contact.title | markdownify | default: Contact Us }}
+        </h2>
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-12">
-        <form id="contactForm"
-          action="https://formspree.io/{% if site.formspree_form_path %}{{ site.formspree_form_path }}{% else %}{{ site.email }}{% endif %}"
-          novalidate="novalidate" method="POST">
-          <!--name="sentMessage"-->
-          <div class="row">
-            <div class="col-md-6">
-              <div class="form-group">
-                <input name="name" class="form-control" id="name" type="text"
-                  placeholder="{{ site.data.sitetext[site.locale].contact.name | default: "Name*" }}"
-                  required="required" data-validation-required-message="{{ site.data.sitetext[site.locale].contact.name-validation | default: "Please enter your name." }}">
-                <p class="help-block text-danger"></p>
-              </div>
-              <div class="form-group">
-                <input name="_replyto" class="form-control" id="email" type="email"
-                  placeholder="{{ site.data.sitetext[site.locale].contact.email | default: "Email*" }}"
-                  required="required" data-validation-required-message="{{ site.data.sitetext[site.locale].contact.email-validation | default: "Please enter your email address." }}">
-                <p class="help-block text-danger"></p>
-              </div>
-              <div class="form-group">
-                <input name="phone" class="form-control" id="phone" type="tel"
-                  placeholder="{{ site.data.sitetext[site.locale].contact.phone | default: "Phone Number" }}"
-                  >
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="form-group">
-                <textarea name="message" class="form-control" id="message"
-                  placeholder="{{ site.data.sitetext[site.locale].contact.message | default: "Message*" }}"
-                  required="required" data-validation-required-message="{{ site.data.sitetext[site.locale].contact.message-validation | default: "Please enter a message." }}">
-                </textarea>
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <input type="hidden" name="_subject" id="email-subject"
-              value="{{ site.data.sitetext[site.locale].contact.subject | default: "Contact Form Submission" }}">
-            <div class="clearfix"></div>
-            <div class="col-lg-12 text-center">
-              <div id="success"></div>
-              <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase"
-                type="submit">{{ site.data.sitetext[site.locale].contact.submit | default: "Send Message" }}</button>
-            </div>
-            <input type="text" name="_gotcha" style="display:none">
-            <input type="hidden" name="_next" value="#" />
-          </div>
-        </form>
+      <div class="col-lg-6 text-center">
+        <p class="section-heading"><b>Email:</b> {{ site.data.sitetext[site.locale].contact.email }}</p>
+        <iframe width="450px" height="300px" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3097.5394038614895!2d-77.46646414866453!3d39.07140957944384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b63bf71619c973%3A0x86d91f3d79ea0884!2sJanelia%20Research%20Campus!5e0!3m2!1sen!2sus!4v1650757648800!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+      <div class="col-lg-6 text-center">
+        <p class="section-heading">
+          <a href="{{ site.data.sitetext[site.locale].contact.twitter_url }}">
+            <i class="fab fa-twitter"></i> Follow us on Twitter!
+          </a>
+        </p>
+        <a class="twitter-timeline" data-width="450" data-height="300" data-theme="dark" href="https://twitter.com/snownontrace?ref_src=twsrc%5Etfw">Tweets by shaohewanglab</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>
     </div>
   </div>
