--- a/_includes/fun.html
+++ b/_includes/fun.html
@@ -4,22 +4,22 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].fun.title | default: "Lab Fun" }}</h2>
-        <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].fun.text }}</h3>
+        <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].fun.text | markdownify }}</h3>
       </div>
     </div>
     <div class="row">
-    {% for event in site.data.sitetext[site.locale].fun.events %}
-      <div class="col-md-6 col-sm-12">
-        <div class="fun-event">
+    {% for event in site.data.sitetext[site.locale].fun.events_wide %}
+      <div class="col-md-12">
+        <div class="fun-event-wide">
           <img class="img-fluid" src="{{ event.image }}" alt="{{ event.name }}">
           <!-- <h4>{{ event.name }}</h4> -->
           <p class="text-muted">{{ event.description | markdownify }}</p>
         </div>
       </div>
     {% endfor %}
-    {% for event in site.data.sitetext[site.locale].fun.events_wide %}
-      <div class="col-md-12">
-        <div class="fun-event-wide">
+    {% for event in site.data.sitetext[site.locale].fun.events %}
+      <div class="col-md-6 col-sm-12">
+        <div class="fun-event">
           <img class="img-fluid" src="{{ event.image }}" alt="{{ event.name }}">
           <!-- <h4>{{ event.name }}</h4> -->
           <p class="text-muted">{{ event.description | markdownify }}</p>
