--- a/_includes/resources.html
+++ b/_includes/resources.html
@@ -22,7 +22,7 @@
           </span> -->
           <ul class="list-inline resource-buttons">
               <li class="list-inline-item">
-                <a href="{{ resource.url }}">
+                <a href="{{ resource.url }}" target="_blank" rel="noopener noreferrer">
                   <i class="{{ resource.icon | default: "fas fa-list" }}"></i>
                 </a>
               </li>
