--- a/_includes/team.html
+++ b/_includes/team.html
@@ -24,7 +24,7 @@
           <ul class="list-inline social-buttons">
             {% for network in person.social %}
               <li class="list-inline-item">
-                <a href="{{ network.url }}">
+                <a href="{{ network.url }}" target="_blank" rel="noopener noreferrer">
                   <i class="{{ network.icon }}"></i>
                 </a>
               </li>
