--- a/_sass/layout/_contact.scss
+++ b/_sass/layout/_contact.scss
@@ -1,10 +1,10 @@
 // Styling for the contact section
 section#contact {
-  background-color: $gray-900;
+  // background-color: $gray-900;
   // background-image: url("#{$contact-image}");
   background-repeat: no-repeat;
   background-position: center;
   .section-heading {
-    color: $white;
+    color: black;
   }
 }
