--- a/_includes/team.html
+++ b/_includes/team.html
@@ -1,44 +1,40 @@
-<!-- Team -->
+<!-- Team Grid -->
 <section class="page-section" id="{{ site.data.sitetext[site.locale].team.section | default: "team" }}">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].team.title | default: "Our Team" }}</h2>
-        <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].team.text }}</h3>
+        <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].team.title | markdownify | default: "our team" }}</h2>
+        <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].team.text | markdownify }}</h3>
       </div>
     </div>
     <div class="row">
-    {% for person in site.data.sitetext[site.locale].team.people %}
-      <div class="col-md-4 col-sm-6">
-        <div class="team-member">
-          <img class="mx-auto rounded-circle" src="{{ person.image }}" alt="{{ person.name }} picture">
-          {%- if person.section -%}
-            <a class="js-scroll-trigger" href="#{{ person.section }}">
-              <h4>{{ person.name }}</h4>
+      {% for person in site.team %}
+          <div class="col-md-4 col-sm-6 team-item">
+            <a class="team-link rounded-circle" data-toggle="modal" href="#person{{ forloop.index }}">
+              <div class="team-hover rounded-circle">
+                <div class="team-hover-content">
+                  <i class="{{ site.data.style.team-icon | default: "fas fa-plus fa-3x" }}"></i>
+                </div>
+              </div>
+              <img class="mx-auto rounded-circle" src="{{ person.caption.image }}" alt="">
             </a>
-          {%- else -%}
-            <h4>{{ person.name }}</h4>
-          {%- endif -%}
-          <h6 class="text-muted">{{ person.degree }}</h6>
-          <p class="text-muted">{{ person.position }}</p>
-          <ul class="list-inline social-buttons">
-            {% for network in person.social %}
-              <li class="list-inline-item">
-                <a href="{{ network.url }}" target="_blank" rel="noopener noreferrer">
-                  <i class="{{ network.icon }}"></i>
-                </a>
-              </li>
-            {% endfor %}
-          </ul>
-        </div>
-      </div>
-    {% endfor %}
-    </div>
-    <div class="row">
-    <!-- <div class="col-lg-8 mx-auto text-center">
-      <div class="large text-muted">{{ site.data.sitetext[site.locale].team.subtext | markdownify }}</div>
-    </div> -->
+            <div class="team-caption">
+              <h4>{{ person.caption.name }}</h4>
+              <h6 class="text-muted">{{ person.caption.degree }}</h6>
+              <p class="text-muted">{{ person.caption.position }}</p>
+              <ul class="list-inline social-buttons">
+                {% for network in person.caption.social %}
+                  <li class="list-inline-item">
+                    <a href="{{ network.url }}" target="_blank" rel="noopener noreferrer">
+                      <i class="{{ network.icon }}"></i>
+                    </a>
+                  </li>
+                {% endfor %}
+              </ul>
+            </div>
+          </div>
+    	{% endfor %}
     </div>
   </div>
 </section>
-<!-- End Team -->
+{% include team_modals.html %}
