--- a/_sass/layout/_team.scss
+++ b/_sass/layout/_team.scss
@@ -1,18 +1,150 @@
 // Styling for the team section
-.team-member {
-  margin-bottom: 50px;
-  text-align: center;
-  img {
-    width: 225px;
-    height: 225px;
-    border: 7px solid fade-out($black, 0.9);
+#team {
+  .team-item {
+    right: 0;
+    margin: 0 0 15px;
+    .team-link {
+      position: relative;
+      width: 225px;
+      height: 225px;
+      display: block;
+      max-width: 400px;
+      margin: 0 auto;
+      cursor: pointer;
+      .team-hover {
+        position: absolute;
+        width: 225px;
+        height: 225px;
+        -webkit-transition: all ease 0.5s;
+        -moz-transition: all ease 0.5s;
+        transition: all ease 0.5s;
+        opacity: 0;
+        background: fade-out($primary, 0.8);
+        &:hover {
+          opacity: 1;
+        }
+        .team-hover-content {
+          font-size: 20px;
+          position: absolute;
+          top: 50%;
+          width: 100%;
+          height: 20px;
+          margin-top: -12px;
+          text-align: center;
+          color: white;
+          i {
+            margin-top: -12px;
+          }
+          h3,
+          h4 {
+            margin: 0;
+          }
+        }
+      }
+    }
+    .team-caption {
+      max-width: 400px;
+      margin: 0 auto;
+      // margin-bottom: 50px;
+      padding: 20px;
+      text-align: center;
+      background-color: $white;
+      h4 {
+        // margin-top: 5px;
+        margin-bottom: 10px;
+        text-transform: none;
+      }
+      p {
+        font-size: 16px;
+        margin-bottom: 15px;
+        // font-style: italic;
+        // @include serif-font;
+      }
+    }
   }
-  h4 {
-    margin-top: 25px;
-    margin-bottom: 5px;
-    text-transform: none;
+  * {
+    z-index: 2;
   }
-  p {
-    margin-top: 0;
+}
+@media (min-width: 225px) {
+  #team {
+    .team-item {
+      margin: 0 0 30px;
+      text-align: center;
+      img {
+        width: 225px;
+        height: 225px;
+        border: 7px solid fade-out($black, 0.9);
+      }
+    }
+  }
+}
+
+.team-modal {
+  .modal-dialog {
+    margin: 1rem;
+    max-width: 100vw;
+  }
+  .modal-content {
+    padding: 100px 0;
+    text-align: center;
+    h2 {
+      font-size: 3em;
+      margin-bottom: 15px;
+    }
+    p {
+      margin-bottom: 30px;
+    }
+    p.item-intro {
+      font-size: 16px;
+      font-style: italic;
+      margin: 20px 0 30px;
+      @include serif-font;
+    }
+    ul.list-inline {
+      margin-top: 0;
+      margin-bottom: 30px;
+    }
+    img {
+      margin-bottom: 30px;
+    }
+    button {
+      cursor: pointer;
+    }
+  }
+  .close-modal {
+    position: absolute;
+    top: 25px;
+    right: 25px;
+    width: 75px;
+    height: 75px;
+    cursor: pointer;
+    background-color: transparent;
+    &:hover {
+      opacity: 0.3;
+    }
+    .lr {
+      /* Safari and Chrome */
+      z-index: 1051;
+      width: 1px;
+      height: 75px;
+      margin-left: 35px;
+      /* IE 9 */
+      -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+      transform: rotate(45deg);
+      background-color: $gray-900;
+      .rl {
+        /* Safari and Chrome */
+        z-index: 1052;
+        width: 1px;
+        height: 75px;
+        /* IE 9 */
+        -webkit-transform: rotate(90deg);
+        -ms-transform: rotate(90deg);
+        transform: rotate(90deg);
+        background-color: $gray-900;
+      }
+    }
   }
 }
