--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@
 
   <meta charset="utf-8">
   <!-- <link rel="icon" href="https://www.janelia.org/sites/all/themes/janelia7/favicon.ico" type="image/x-icon" /> -->
-  <link rel="icon" href="assets/favicon-blk.ico" type="image/x-icon" />
+  <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous"> -->
