update markdown links to open in new tab

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -16,7 +16,7 @@
       </div>
       <div class="col-lg-6 text-center">
         <p class="section-heading">
-          <a href="{{ site.data.sitetext[site.locale].contact.twitter_url }}">
+          <a href="{{ site.data.sitetext[site.locale].contact.twitter_url }}" target="_blank">
             <i class="fab fa-twitter"></i> Follow us on Twitter!
           </a>
         </p>
