--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -8,9 +8,15 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-8 mx-auto text-center">
-        <div class="large text-muted">{{ site.data.sitetext[site.locale].publications.body | markdownify }}</div>
-      </div>
+        <div class="col-lg-12">
+          <p><b>Shaohe Wang<sup>#</sup></b>, Kazue Matsumoto, Samantha R. Lish, Alexander X. Cartagena-Rivera, Kenneth M. Yamada<sup>#</sup>. <a href="https://doi.org/10.1016/j.cell.2021.05.015" target="_blank">Budding epithelial morphogenesis driven by cell-matrix versus cell-cell adhesion</a> (2021) <i>Cell</i></p>
+          <p><b>Shaohe Wang</b>. <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6500779/" target="_blank">Single Molecule RNA FISH (smFISH) in Whole‐Mount Mouse Embryonic Organs</a> (2019) <i>Current Protocols in Cell Biology</i></p>
+          <p><b>Shaohe Wang<sup>*</sup></b>, Stacy D. Ochoa<sup>*</sup>, Renat N. Khaliullin<sup>*</sup>, Adina Gerson-Gurwitz, Jeffrey M. Hendel, Zhiling Zhao, Ronald Biggs, Andrew D. Chisholm, Arshad Desai, Karen Oegema, Rebecca A. Green. <a href="http://dev.biologists.org/lookup/doi/10.1242/dev.174029" target="_blank">A high-content imaging approach to profile C. elegans embryonic development</a> (2019) <i>Development</i></p>
+          <p><b>Shaohe Wang</b>, Ngang Heok Tang, Pablo Lara-Gonzalez, Zhiling Zhao, Dhanya K. Cheerambathur, Bram Prevo, Andrew D. Chisholm, Arshad Desai, Karen Oegema. <a href="https://doi.org/10.1242/dev.150094" target="_blank">A toolkit for GFP-mediated tissue-specific protein degradation in C. elegans</a> (2017) <i>Development</i></p>
+          <p>Adina Gerson-Gurwitz, <b>Shaohe Wang</b>, Shashank Sathe, Rebecca Green, Gene W. Yeo, Karen Oegema, Arshad Desai. <a href="https://doi.org/10.1016/j.cell.2016.02.040" target="_blank">A Small RNA-Catalytic Argonaute Pathway Tunes Germline Transcript Levels to Ensure Embryonic Divisions</a> (2016) <i>Cell</i></p>
+          <p>Sophie Quintin, <b>Shaohe Wang</b>, Julien Pontabry, Ambre Bender, François Robin, Vincent Hyenne, Frédéric Landmann, Christelle Gally, Karen Oegema, Michel Labouesse. <a href="https://journals.biologists.com/dev/article/143/1/160/47305/Non-centrosomal-epidermal-microtubules-act-in" target="_blank">Non-centrosomal epidermal microtubules act in parallel to LET-502/ROCK to promote C. elegans elongation</a> (2016) <i>Development</i></p>
+          <p><b>Shaohe Wang</b>, <b>Di Wu</b>, Sophie Quintin, Rebecca A Green, Dhanya K Cheerambathur, Stacy D Ochoa, Arshad Desai, Karen Oegema. <a href="https://elifesciences.org/articles/08649" target="_blank">NOCA-1 functions with γ-tubulin and in parallel to Patronin to assemble non-centrosomal microtubule arrays in C. elegans</a> (2015) <i>eLife</i></p>
+        </div>
     </div>
   </div>
 </section>
