Fix background to match bg-light color

--- a/_sass/layout/_team.scss
+++ b/_sass/layout/_team.scss
@@ -48,7 +48,8 @@
       // margin-bottom: 50px;
       padding: 20px;
       text-align: center;
-      background-color: $white;
+      // background-color: $white;
+      background-color: #f8f9fa;
       h4 {
         // margin-top: 5px;
         margin-bottom: 10px;
