--- a/_sass/components/_navbar.scss
+++ b/_sass/components/_navbar.scss
@@ -1,6 +1,7 @@
 // Styling for the navbar
 #mainNav {
-  background-color: $gray-900;
+  // background-color: rgba(255,255,255,0.9);
+  background-color: $white;
   .navbar-toggler {
     font-size: 12px;
     right: 0;
@@ -63,7 +64,7 @@
     &.navbar-shrink {
       padding-top: 0;
       padding-bottom: 0;
-      background-color: $gray-900;
+      background-color: $white;
       .navbar-brand {
         font-size: 1.1em;
         padding: 12px 0;
