--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -8,6 +8,7 @@ header.masthead {
   background-position: center center;
   background-size: cover;
   // background-size: contain;
+  height: 960px;
   .intro-text {
     padding-top: 150px;
     padding-bottom: 100px;
