update team content and style

--- a/_includes/team.html
+++ b/_includes/team.html
@@ -22,6 +22,7 @@
               <h4>{{ person.caption.name }}</h4>
               <h6 class="text-muted">{{ person.caption.degree }}</h6>
               <p class="text-muted">{{ person.caption.position }}</p>
+              <p class="text-muted">{{ person.caption.pronouns }}</p>
               <ul class="list-inline social-buttons">
                 {% for network in person.caption.social %}
                   <li class="list-inline-item">
