--- a/_sass/layout/_team.scss
+++ b/_sass/layout/_team.scss
@@ -92,21 +92,31 @@
   }
   .modal-content {
     padding: 100px 0;
-    text-align: center;
+    // text-align: center;
     h2 {
-      font-size: 3em;
+      text-align: center;
+      font-size: 2em;
       margin-bottom: 15px;
     }
+    h4 {
+      text-align: center;
+      // margin-top: 5px;
+      margin-bottom: 10px;
+      text-transform: none;
+    }
     p {
+      text-align: left;
       margin-bottom: 30px;
     }
     p.item-intro {
+      text-align: center;
       font-size: 16px;
       font-style: italic;
       margin: 20px 0 30px;
       @include serif-font;
     }
     ul.list-inline {
+      text-align: left;
       margin-top: 0;
       margin-bottom: 30px;
     }
