--- a/_includes/research.html
+++ b/_includes/research.html
@@ -6,6 +6,11 @@
         <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].research.title | markdownify | default: "research" }}</h2>
         <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].research.text | markdownify }}</h3>
       </div>
+      <div class="col-lg-12">
+        <p>{{ site.data.sitetext[site.locale].research.summary_1  | markdownify }}</p>
+        <p>{{ site.data.sitetext[site.locale].research.summary_2  | markdownify }}</p>
+        <p>{{ site.data.sitetext[site.locale].research.summary_end  | markdownify }}</p>
+      </div>
     </div>
     <div class="row">
     	{% for project in site.research %}
