--- a/_sass/layout/_research.scss
+++ b/_sass/layout/_research.scss
@@ -77,15 +77,18 @@
   }
   .modal-content {
     padding: 100px 0;
-    text-align: center;
+
     h2 {
-      font-size: 3em;
+      text-align: center;
+      font-size: 2em;
       margin-bottom: 15px;
     }
     p {
+      text-align: left;
       margin-bottom: 30px;
     }
     p.item-intro {
+      text-align: center;
       font-size: 16px;
       font-style: italic;
       margin: 20px 0 30px;
