update team content

--- a/_sass/layout/_team.scss
+++ b/_sass/layout/_team.scss
@@ -106,7 +106,7 @@
     }
     p {
       text-align: left;
-      margin-bottom: 30px;
+      // margin-bottom: 30px;
     }
     p.item-intro {
       text-align: center;
@@ -118,7 +118,7 @@
     ul.list-inline {
       text-align: left;
       margin-top: 0;
-      margin-bottom: 30px;
+      // margin-bottom: 30px;
     }
     img {
       margin-bottom: 30px;
