--- a/_includes/fun.html
+++ b/_includes/fun.html
@@ -9,7 +9,7 @@
     </div>
     <div class="row">
     {% for event in site.data.sitetext[site.locale].fun.events_wide %}
-      <div class="col-md-12">
+      <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="fun-event-wide">
           <img class="img-fluid" src="{{ event.image }}" alt="{{ event.name }}">
           <!-- <h4>{{ event.name }}</h4> -->
