--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -33,10 +33,18 @@ header.masthead {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 540px) {
   header.masthead {
-    width: 100vw;
-    // max-width: 100vw;
+    // width: 100vw;
+    max-width: 100vw;
+    // max-height: 100vh;
+  }
+}
+
+@media screen and (max-width: 780px) {
+  header.masthead {
+    // width: 100vw;
+    max-width: 100vw;
     // max-height: 100vh;
   }
 }
