--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -35,16 +35,16 @@ header.masthead {
 
 @media screen and (max-width: 540px) {
   header.masthead {
-    // width: 100vw;
-    max-width: 100vw;
+    width: 540px;
+    // max-width: 100vw;
     // max-height: 100vh;
   }
 }
 
 @media screen and (max-width: 780px) {
   header.masthead {
-    // width: 100vw;
-    max-width: 100vw;
+    width: 780px;
+    // max-width: 100vw;
     // max-height: 100vh;
   }
 }
