--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -35,7 +35,7 @@ header.masthead {
 
 @media screen and (max-width: 540px) {
   header.masthead {
-    width: 540px;
+    width: 100vw;
     // max-width: 100vw;
     // max-height: 100vh;
   }
@@ -43,7 +43,7 @@ header.masthead {
 
 @media screen and (max-width: 780px) {
   header.masthead {
-    width: 780px;
+    width: 100vw;
     // max-width: 100vw;
     // max-height: 100vh;
   }
