--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -33,21 +33,21 @@ header.masthead {
   }
 }
 
-@media screen and (max-width: 540px) {
-  header.masthead {
-    width: 100vw;
-    // max-width: 100vw;
-    // max-height: 100vh;
-  }
-}
-
-@media screen and (max-width: 780px) {
-  header.masthead {
-    width: 100vw;
-    // max-width: 100vw;
-    // max-height: 100vh;
-  }
-}
+// @media screen and (max-width: 540px) {
+//   header.masthead {
+//     width: 100vw;
+//     // max-width: 100vw;
+//     // max-height: 100vh;
+//   }
+// }
+//
+// @media screen and (max-width: 780px) {
+//   header.masthead {
+//     width: 100vw;
+//     // max-width: 100vw;
+//     // max-height: 100vh;
+//   }
+// }
 
 @media (min-width: 768px) {
   header.masthead {
