--- a/_sass/layout/_fun.scss
+++ b/_sass/layout/_fun.scss
@@ -3,6 +3,7 @@
   margin-bottom: 50px;
   text-align: center;
   width: 400px;
+  max-width: 40vw;
   margin-left: auto;
   margin-right: auto;
   img {
@@ -29,6 +30,7 @@
   margin-bottom: 50px;
   text-align: center;
   width: 1100px;
+  max-width: 80vw;
   margin-left: 0 auto;
   margin-right: 0 auto;
   img {
