--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -36,16 +36,16 @@ header.masthead {
 @media screen and (max-width: 540px) {
   header.masthead {
     // width: 100vw;
-    max-width: 100vw;
-    // max-height: 100vh;
+    height: 33vh;
+    // max-width: 100vw;
   }
 }
 
 @media screen and (max-width: 780px) {
   header.masthead {
     // width: 100vw;
-    max-width: 100vw;
-    // max-height: 100vh;
+    height: 33vh;
+    // max-width: 100vw;
   }
 }
 
