update iframe width control for small device

--- a/_sass/layout/_contact.scss
+++ b/_sass/layout/_contact.scss
@@ -8,3 +8,11 @@ section#contact {
     color: black;
   }
 }
+
+@media screen and (max-width: 780px) {
+    .iframe {
+        max-width: 100% !important;
+        width: auto !important;
+        height: auto !important;
+    }
+}
