--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -11,8 +11,7 @@
     <div class="row">
       <div class="col-lg-6 text-center">
         <p class="section-heading"><b>Email:</b> {{ site.data.sitetext[site.locale].contact.email }}</p>
-        <!-- <iframe width="450px" height="300px" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3097.5394038614895!2d-77.46646414866453!3d39.07140957944384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b63bf71619c973%3A0x86d91f3d79ea0884!2sJanelia%20Research%20Campus!5e0!3m2!1sen!2sus!4v1650757648800!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
-        <iframe max-width="80vw" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d565162.8012449575!2d-77.66494144808377!3d39.07791427621286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b63bf71619c973%3A0x86d91f3d79ea0884!2sJanelia%20Research%20Campus!5e0!3m2!1sen!2sus!4v1652207690224!5m2!1sen!2sus" width="450" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d565162.8012449575!2d-77.66494144808377!3d39.07791427621286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b63bf71619c973%3A0x86d91f3d79ea0884!2sJanelia%20Research%20Campus!5e0!3m2!1sen!2sus!4v1652207690224!5m2!1sen!2sus" width="450" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
       <div class="col-lg-6 text-center">
         <p class="section-heading">
