--- a/_sass/layout/_contact.scss
+++ b/_sass/layout/_contact.scss
@@ -10,7 +10,7 @@ section#contact {
 }
 
 @media screen and (max-width: 780px) {
-    .iframe {
+    iframe {
         max-width: 100% !important;
         width: auto !important;
         height: auto !important;
