--- a/_sass/layout/_contact.scss
+++ b/_sass/layout/_contact.scss
@@ -10,9 +10,9 @@ section#contact {
 }
 
 @media screen and (max-width: 780px) {
-    iframe {
+    .map_iframe {
         max-width: 100% !important;
-        width: auto !important;
-        height: auto !important;
+        // width: auto !important;
+        // height: auto !important;
     }
 }
