Revert "update map iframe width"
This reverts commit 5c4c26b68b45a7ed75433d3a39611473e6fd0638.

--- a/_sass/layout/_contact.scss
+++ b/_sass/layout/_contact.scss
@@ -10,9 +10,9 @@ section#contact {
 }
 
 @media screen and (max-width: 780px) {
-    .map_iframe {
+    iframe {
         max-width: 100% !important;
-        // width: auto !important;
-        // height: auto !important;
+        width: auto !important;
+        height: auto !important;
     }
 }
