--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -19,8 +19,8 @@
             <i class="fab fa-twitter"></i> Follow us on Twitter!
           </a>
         </p>
-        <!-- <a class="twitter-timeline" data-width="450" data-height="300" data-theme="light" href="https://twitter.com/snownontrace?ref_src=twsrc%5Etfw">Tweets by shaohewanglab</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
-        <a class="twitter-timeline" data-width="450" data-height="300" data-theme="light" href="https://twitter.com/shaohewanglab?ref_src=twsrc%5Etfw">Tweets by shaohewanglab</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <a href="https://twitter.com/intent/tweet?button_hashtag=shaohewanglab&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false">Tweet #shaohewanglab</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <!-- <a class="twitter-timeline" data-width="450" data-height="300" data-theme="light" href="https://twitter.com/shaohewanglab?ref_src=twsrc%5Etfw">Tweets by shaohewanglab</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
       </div>
     </div>
   </div>
