--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -19,7 +19,7 @@
             <i class="fab fa-twitter"></i> Follow us on Twitter!
           </a>
         </p>
-        <a class="twitter-timeline" data-width="450" data-height="300" data-theme="light" href="https://twitter.com/shaohewanglab?ref_src=twsrc%5Etfw">Tweets by shaohewanglab</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <blockquote class="bluesky-embed" data-bluesky-uri="at://did:plc:gfglkfxd2mc5ys6ljrriada6/app.bsky.feed.post/3lpd42vehhk2v" data-bluesky-cid="bafyreicv5kgslfyrzxh6t5jlyh4rlzd6eggo7cjtlcy6etolkvbak6ee7i" data-bluesky-embed-color-mode="system"><p lang="en">We are a small group of scientists working to understand how complex organs are built by cells and extracellular matrices!</p>&mdash; Shaohe Wang Lab (<a href="https://bsky.app/profile/did:plc:gfglkfxd2mc5ys6ljrriada6?ref_src=embed">@shaohewanglab.bsky.social</a>) <a href="https://bsky.app/profile/did:plc:gfglkfxd2mc5ys6ljrriada6/post/3lpd42vehhk2v?ref_src=embed">May 16, 2025 at 6:43 PM</a></blockquote><script async src="https://embed.bsky.app/static/embed.js" charset="utf-8"></script>
       </div>
     </div>
   </div>
